security/network-policies/destinationrules.yml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-frontend-mtls
  namespace: temporal
spec:
  host: temporal-frontend.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-admintools-mtls
  namespace: temporal
spec:
  host: temporal-admintools.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-frontend-headless-mtls
  namespace: temporal
spec:
  host: temporal-frontend-headless.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-history-headless-mtls
  namespace: temporal
spec:
  host: temporal-history-headless.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-internal-frontend-mtls
  namespace: temporal
spec:
  host: temporal-internal-frontend.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-matching-headless-mtls
  namespace: temporal
spec:
  host: temporal-matching-headless.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-web-mtls
  namespace: temporal
spec:
  host: temporal-web.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: temporal-worker-headless-mtls
  namespace: temporal
spec:
  host: temporal-worker-headless.temporal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
